# 3D-Perturbed-Rod

./: CMakeLists.txt  README.md  README.txt  convert.cpp  convert2.cpp  default.cfg  default1.cfg  default2.cfg  export.cpp  face.hpp  main.cpp  mesh.cpp  mesh.hpp  names.h  pde.cpp  pde.hpp  tet.hpp  tmv.hpp  utils.hpp  vertex.hpp
